--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,6 +2,17 @@
 {% load crispy_forms_tags %}
 {% block content%}
     <div class="content-section">
+        {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+        {% endif %}
+        {% if next %}
+            {% if user.is_authenticated %}
+                <p>Your account doesn't have access to this page. To proceed,
+                please login with an account that has access.</p>
+            {% else %}
+                <p>Please login to see this page.</p>
+            {% endif %}
+        {% endif %}
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
