--- a/instagram/templates/instagram/base.html
+++ b/instagram/templates/instagram/base.html
@@ -8,6 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/instagram.css' %}">
 
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cookie|Cormorant+Garamond|Cute+Font|Gloria+Hallelujah|Indie+Flower|Lobster|Macondo+Swash+Caps|Pacifico|Special+Elite|Vollkorn&display=swap" rel="stylesheet">
+
+
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -22,24 +28,33 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="#">Instagram</a>
+                <a class="navbar-brand mr-4" id="gram" href="{% url 'instagram-home' %}"><i class="fas fa-home"></i>| Instagram |</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
-                    <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{% url 'instagram-home' %}">Home</a>
-                        <a class="nav-item nav-link" href="{% url 'instagram-about' %}">About</a>
+                    <div class="navbar-nav mr-auto ml-5">
+                        <!-- Adding a search form  -->
+                            <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+                            <div class="input-group">
+                                <input id="search" type="text" class="form-control" placeholder="Search Photos" name="image">
+                                <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>
+                    
+                            </form>
+                        <!-- search form end -->
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'image-create' %}">New Post</a>
-                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-item nav-link ml-5" href="{% url 'image-create' %}"><i class="fas fa-plus"></i> | New Post</a>
+                        <a class="nav-item nav-link ml-5" href="{% url 'profile' %}"><i class="fas fa-user"></i> | profile</a>
+                        <a class="nav-item nav-link ml-5" href="{% url 'logout' %}"> <i class="fas fa-lock-open"></i> | Logout</a>
                         {% else %}
-                            <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                            <a class="nav-item nav-link ml-5" href="{% url 'login' %}"><i class="fas fa-user-lock"></i> | login</a>
+                            <a class="nav-item nav-link ml-5" href="{% url 'register' %}"><i class="fas fa-user-plus"></i> | Register</a>
                         {% endif %}
                     </div>
                 </div>
