add rows and columns

--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,7 +1,12 @@
 {% extends "instagram/base.html" %}
 {% block content%}
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
     <div class="alert alert-info">
-        Your password has been set.
-    </div>
-    <a href="{% url 'login' %}">Sign in here</a>
+            Your password has been set.
+        </div>
+        <a href="{% url 'login' %}">Sign in here</a>
+</div>
+</div>
 {% endblock content %}
