--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,35 +1,41 @@
 {% extends "instagram/base.html" %}
 {% load crispy_forms_tags %}
 {% block content%}
-    <div class="content-section">
-        {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-        {% endif %}
-        {% if next %}
-            {% if user.is_authenticated %}
-                <p>Your account doesn't have access to this page. To proceed,
-                please login with an account that has access.</p>
-            {% else %}
-                <p>Please login to see this page.</p>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <div class="content-section">
+            <!-- {% if form.errors %}
+            <p>Your username and password didn't match. Please try again.</p>
             {% endif %}
-        {% endif %}
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
-                <small class="text-muted ml-2">
-                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
-                </small>
+            {% if next %}
+                {% if user.is_authenticated %}
+                    <p>Your account doesn't have access to this page. To proceed,
+                    please login with an account that has access.</p>
+                {% else %}
+                    <p>Please login to see this page.</p>
+                {% endif %}
+            {% endif %} -->
+            <form method="POST">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Log In</legend>
+                    {{ form|crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-info" type="submit">Login</button>
+                    <small class="text-muted ml-2">
+                        <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                    </small>
+                </div>
+            </form>
+            <div class="border-top pt-3">
+                <small class="text-muted">Need an account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a></small>
             </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">Need an account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a></small>
         </div>
     </div>
+</div>
+    
 
 
 {% endblock content %}
