--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,9 +1,14 @@
 {% extends "instagram/base.html" %}
 {% block content%}
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
     <h2>
-        You have been logged out
+        You have been successfully logged out
     </h2>
     <div class="border-top pt-3">
         <a href="{% url 'login' %}">Log In Again</a>
     </div>
+    </div>
+</div>
 {% endblock content %}
