--- a/instagram/templates/instagram/base.html
+++ b/instagram/templates/instagram/base.html
@@ -28,7 +28,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" id="gram" href="{% url 'instagram-home' %}"><i class="fas fa-home"></i>| Instagram |</a>
+                <a class="navbar-brand mr-4" id="gram" href="{% url 'instagram-home' %}"><i class="fab fa-instagram"></i> | Instagram</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
