--- a/instagram/templates/instagram/home.html
+++ b/instagram/templates/instagram/home.html
@@ -12,7 +12,7 @@
                 <div class="mb-2">
                     <img src="{{ image.poster.profile.image.url }}" class="rounded-circle article-img" alt="...">
                     <div class="article-metadata">
-                        <a class="mr-2" href="#">{{ image.poster }}</a>
+                        <a class="mr-2" href="{% url 'user-posts' image.poster.username %}">{{ image.poster }}</a>
                         <small class="text-muted">{{ image.date_posted|date:"F d, Y" }}</small>
                     </div>
                 </div>
