--- a/instagram/templates/instagram/image_detail.html
+++ b/instagram/templates/instagram/image_detail.html
@@ -11,7 +11,7 @@
                 <div class="mb-2">
                     <img src="{{ object.poster.profile.image.url }}" class="rounded-circle article-img" alt="...">
                     <div class="article-metadata">
-                        <a class="mr-2" href="#">{{object.poster}}</a>
+                        <a class="mr-2" href="{% url 'user-posts' object.poster.username %}">{{object.poster}}</a>
                         <small class="text-muted">{{object.date_posted|date:"F d, Y"}}</small>
                         {% if object.poster == user %}
                             <div>
@@ -30,6 +30,11 @@
                     <a class="mr-2" href="#"><i class="fas fa-heart"></i><small>100</small></a> 
                     <a class="mr-2" href="#"><i class="fas fa-heart-broken"></i><small>100</small></a> 
                     <a class="mr-2" href="#"><i class="fas fa-copy"></i></a>
+                </div>
+                <div>
+                    <p>
+                        {{object.comment}}
+                    </p>
                 </div>
             </div>
     </div>
