--- a/instagram/templates/instagram/image_form.html
+++ b/instagram/templates/instagram/image_form.html
@@ -1,4 +1,4 @@
-{% extends "Instagram/base.html" %}
+{% extends "instagram/base.html" %}
 {% load crispy_forms_tags %}
 {% block content%}
 <div class="row">
